# ffmpeg-android-test

./: .gitignore
app/: build.gradle
app/src/androidTest/java/online/testdata/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/online/testdata/ffmpegtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/online/testdata/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
